<resources>
    <string name="app_name">user</string>

    <!-- PlaceHolder text input -->
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>

    <!-- Resources for forms -->
    <string name="user_choice_sexe">Transgenre ?</string>
    <string name="user_is_man">Man</string>
    <string name="user_is_women">Women</string>
    <string name="user_pro">Pro player ?</string>
    <string name="user_validation">Submit</string>
</resources>
