<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="UserViewModel"
            type="com.example.user.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.UserFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/user_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/user_password"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/text_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_choice_sexe"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/user_password"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

        <RadioGroup
            android:id="@+id/user_sexe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/text_choice"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/user_is_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_is_man"
                />
            <RadioButton
                android:id="@+id/user_is_women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_is_women"
                />

        </RadioGroup>


        <Switch
            android:id="@+id/user_pro_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/user_sexe"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:text="@string/user_pro" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_validation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>